Minor contributor changes

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <a title="Nimish Bhonsale" href="https://github.com/nimishbhonsale-vmware"><img alt="Nimish Bhonsale" src="https://avatars.githubusercontent.com/u/12462271?v=3" /></a>
                 <a title="wdu88" href="https://github.com/wdu88"><img alt="wdu88" src="https://avatars.githubusercontent.com/u/12436217?v=3" /></a>
                 <a title="Kyoung Won Kwon" href="https://github.com/kyoungkwon"><img alt="Kyoung Won Kwon" src="https://avatars.githubusercontent.com/u/13558419?v=3" /></a>
-                <a title="Anca Antochi" href="https://github.com/kyoungkwon"><img alt="Anca Antochi" src="https://avatars.githubusercontent.com/u/15937192?v=3" /></a>
+                <a title="Anca Antochi" href="https://github.com/ancaantochi"><img alt="Anca Antochi" src="https://avatars.githubusercontent.com/u/15937192?v=3" /></a>
               </p>
             </div>
           </div>
