adding more contributors

--- a/index.html
+++ b/index.html
@@ -167,6 +167,13 @@
                 <a title="wdu88" href="https://github.com/wdu88"><img alt="wdu88" src="https://avatars.githubusercontent.com/u/12436217?v=3" /></a>
                 <a title="Kyoung Won Kwon" href="https://github.com/kyoungkwon"><img alt="Kyoung Won Kwon" src="https://avatars.githubusercontent.com/u/13558419?v=3" /></a>
                 <a title="Anca Antochi" href="https://github.com/ancaantochi"><img alt="Anca Antochi" src="https://avatars.githubusercontent.com/u/15937192?v=3" /></a>
+                <a title="Andrew Gormley" href="https://github.com/agormley"><img alt="Andrew Gormley" src="https://avatars.githubusercontent.com/u/15987205?v=3" /></a>
+                <a title="rlohia" href="https://github.com/rlohia"><img alt="rlohia" src="https://avatars.githubusercontent.com/u/11660743?v=3" /></a>
+              </p>
+              <p>
+                <a title="singhsaurabh005" href="https://github.com/singhsaurabh005"><img alt="singhsaurabh005" src="https://avatars.githubusercontent.com/u/11926051?v=3" /></a>
+                <a title="harisso" href="https://github.com/harisso"><img alt="harisso" src="https://avatars.githubusercontent.com/u/11852065?v=3" /></a>
+                <a title="sjchase" href="https://github.com/sjchase"><img alt="sjchase" src="https://avatars.githubusercontent.com/u/1044976?v=3" /></a>
               </p>
             </div>
           </div>
