--- a/vmidentity/lightwaveui/web/app/src/sso/policies/policies.view.html
+++ b/vmidentity/lightwaveui/web/app/src/sso/policies/policies.view.html
@@ -372,7 +372,7 @@
                         </div>
                     </div>
                 </uib-tab>
-                <uib-tab index="2"  heading="Smart Card Configuration">
+                <uib-tab index="2"  heading="Authentication Policy">
                     <div style="margin-top:20px;">
                         <div class="pull-right">
                             <button type="button"
