--- a/vmidentity/lightwaveui/web/app/src/sso/usersandgroups/group/group.add.html
+++ b/vmidentity/lightwaveui/web/app/src/sso/usersandgroups/group/group.add.html
@@ -19,7 +19,10 @@
         {{globals.popup_errors.details}}
     </div>
     <div class="row">
-        <div class="row content popup-content">
+        <form name="newgroupform"
+              ng-submit="saveGroup(newgroup)"
+              role="form">
+            <div class="row content popup-content">
 
             <div class="popup-row col-xs-12">
                 <div class="col-xs-4">
@@ -32,6 +35,7 @@
                            name="newgroupname"
                            ng-model="newgroup.name"
                            class="form-control pull-left"
+                           required
                            placeholder="Contoso"/>
                 </div>
             </div>
@@ -45,16 +49,14 @@
                                ng-model="newgroup.details.description"
                                class="form-control pull-left"
                                cols="200"
+                               required
                                placeholder="Contoso group sample description"
                                style="resize:none;border:1px solid lightgray;">
                      </textarea>
                 </div>
             </div>
         </div>
-        <form name="newgroupform"
-             ng-submit="saveGroup(newgroup)"
-             role="form">
-                <div class="popup-row col-xs-12">
+            <div class="popup-row col-xs-12">
                     <button type="submit"
                             class="btn btn-primary pull-right btn-popup-footer"
                             ng-disabled="newgroupform.$invalid">Save</button>
