--- a/vmidentity/lightwaveui/web/app/src/sso/serviceproviders/oidcclient/oidcclient.view.html
+++ b/vmidentity/lightwaveui/web/app/src/sso/serviceproviders/oidcclient/oidcclient.view.html
@@ -40,7 +40,7 @@
                 </div>
                 <div class="col-xs-8">
                     {{
-                        vm.selectedOIDCClient.oidcclientMetadataDTO.CertSubjectDN
+                        vm.selectedOIDCClient.oidcclientMetadataDTO.certSubjectDN
                     }}
                 </div>
             </div>
