--- a/vmidentity/lightwaveui/web/app/src/sso/certificates/certificate.view.html
+++ b/vmidentity/lightwaveui/web/app/src/sso/certificates/certificate.view.html
@@ -66,7 +66,10 @@
                             <div class="large-grid-header-cell col-xs-2">
                                 Chain
                             </div>
-                            <div class="large-grid-header-cell col-xs-3">
+                            <div class="large-grid-header-cell col-xs-1">
+                                Status
+                            </div>
+                            <div class="large-grid-header-cell col-xs-2">
                                     Subject
                             </div>
                             <div class="large-grid-header-cell col-xs-3">
@@ -99,7 +102,11 @@
                                          height="16px"/>
                                    {{chain.name}}
                                 </div>
-                                <div class="col-xs-3"
+                                <div class="col-xs-1"
+                                     uib-tooltip="{{chain.active}}">
+                                    {{chain.active}}
+                                </div>
+                                <div class="col-xs-2"
                                      uib-tooltip="{{certificate.metadata.subject}}">
                                     <button type="button"
                                             class="btn btn-link"
@@ -108,8 +115,8 @@
                                             style="margin-top:-10px;">
 
                                         {{
-                                            certificate.metadata.subject.length > 30 ?
-                                            certificate.metadata.subject.substring(0,30) + '...' :
+                                            certificate.metadata.subject.length > 18 ?
+                                            certificate.metadata.subject.substring(0,18) + '...' :
                                             certificate.metadata.subject;
                                         }}
                                     </button>
