Bug fixes 1699260, 1700047, 1700087, 1700080, 1700120 service providers and certificate UI cosmetic issues
Change-Id: Ifa0fb01fb92fb9e62aa5734d707e6b28a024ddee

--- a/vmidentity/lightwaveui/web/app/src/sso/servermgmt/servermgmt.view.html
+++ b/vmidentity/lightwaveui/web/app/src/sso/servermgmt/servermgmt.view.html
@@ -159,7 +159,11 @@
                                          width="16px"
                                          height="16px"
                                          style="margin-top:-10px;"/>
-                                        {{tenant.name}}
+                                    {{
+                                        tenant.name.length > 50 ?
+                                        tenant.name.substring(0,50) + '...' :
+                                        tenant.name;
+                                    }}
                                 </div>
                                 <div class="col-xs-4"
                                      uib-tooltip="{{tenant.username}}">
