--- a/vmidentity/lightwaveui/web/app/src/sso/identitysources/identitysource/identitysource.edit.html
+++ b/vmidentity/lightwaveui/web/app/src/sso/identitysources/identitysource/identitysource.edit.html
@@ -211,6 +211,7 @@
                                         type="button"
                                         ng-click="vm.testConnection(vm.selectedIdentitysource)"
                                         uib-tooltip="Test Connection"
+                                        ng-disabled="!vm.isValid()"
                                         style="margin-right:10px;">
                                     Test Connection
                                 </button>
@@ -337,18 +338,16 @@
             <div class="popup-row col-xs-12">
                 <button type="submit"
                         class="btn btn-primary pull-right btn-popup-footer"
-                        ng-show="vm.idsTab == 4;"
-                        ng-disabled="addnewuserform.$invalid">Save</button>
+                        ng-show="vm.idsTab == 4;">Save</button>
                 <button type="button"
                         class="btn btn-primary pull-right btn-popup-footer"
                         ng-show="vm.idsTab < 4;"
                         ng-click="vm.showNextTab()"
-                        ng-disabled="addnewuserform.$invalid">Next</button>
+                        ng-disabled="!vm.isValid()">Next</button>
                 <button type="button"
                         class="btn btn-default pull-right btn-popup-footer"
                         ng-show="vm.idsTab > 1;"
-                        ng-click="vm.showPreviousTab()"
-                        ng-disabled="addnewuserform.$invalid">Back</button>
+                        ng-click="vm.showPreviousTab()">Back</button>
                 <button type="button"
                         class="btn btn-default pull-right btn-popup-footer"
                         ng-click="closeThisDialog('cancel')">Cancel</button>
