--- a/vmidentity/lightwaveui/web/app/index.html
+++ b/vmidentity/lightwaveui/web/app/index.html
@@ -13,13 +13,13 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
         integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="css/lightwave-ui.0.0.1.2.min.css">
-  <link rel="stylesheet" href="css/lightwave-ui-vendor.0.0.1.2.min.css">
+    <link rel="stylesheet" href="css/lightwave-ui.0.0.2.0.min.css">
+  <link rel="stylesheet" href="css/lightwave-ui-vendor.0.0.2.0.min.css">
 </head>
 <body>
     <div ng-controller="ProfileCntrl">
         <div class="title">
-          <img src="assets/vm_logo.png" height="16px;" style="margin-left:10px;border-radius: 3px;"/>
+          <img src="assets/vm_logo.png" height="32px;" width="32px" style="margin-left:10px;border-radius: 3px;margin-right:5px;"/>
             Lightwave Admin
             <sup><small>Beta</small></sup>
             <div ng-show="globals.currentUser" class="logged-in-user ng-cloak">
@@ -73,9 +73,9 @@
     <div ng-view style="width:95%;" ng-show="globals.currentUser">
 
     </div>
-    <script src="js/lightwave-ui-vendor.0.0.1.2.min.js"></script>
-    <script src="js/lightwave-ui.0.0.1.2.min.js"></script>
-    <script src="js/lightwave-app-ui.0.0.1.2.js"></script>
+    <script src="js/lightwave-ui-vendor.0.0.2.0.min.js"></script>
+    <script src="js/lightwave-ui.0.0.2.0.min.js"></script>
+    <script src="js/lightwave-app-ui.0.0.2.0.js"></script>
 
 </body>
 </html>
