--- a/vmidentity/lightwaveui/web/app/src/sso/serviceproviders/relyingparty/relyingparty.view.html
+++ b/vmidentity/lightwaveui/web/app/src/sso/serviceproviders/relyingparty/relyingparty.view.html
@@ -91,15 +91,16 @@
                 <div class="col-xs-4">
                         Single Logout Services
                 </div>
-                <div class="col-xs-8"></div>
+                <div class="col-xs-8">
                     <div ng-show="!vm.selectedRelyingParty.singleLogoutServices ||
                                                             vm.selectedRelyingParty.singleLogoutServices.length <= 0 ">
                         No single logout services specified
                     </div>
-                   <div ng-repeat="slo in vm.selectedRelyingParty.singleLogoutServices">
+                   <div ng-repeat="slo in vm.selectedRelyingParty.singleLogoutServices"
+                        ng-show="vm.selectedRelyingParty.singleLogoutServices">
                        <button type="button"
                                class="btn btn-link"
-                               ng-click="relyingpartyvm.viewslo()"
+                               ng-click="relyingpartyvm.viewSlo(slo)"
                                uib-tooltip="{{slo.name}}"
                                style="margin-left:-10px;word-wrap: break-word;word-break: break-all">
                            {{
@@ -111,6 +112,7 @@
                             <!--{{slo.name}}({{slo.endpoint}}) - binding: {{slo.binding}}-->
                     </div>
                 </div>
+            </div>
             <div class="popup-row col-xs-12">
                 <div class="col-xs-4">
                         Assertion Consumers
@@ -123,7 +125,7 @@
                              ng-show="vm.selectedRelyingParty.assertionConsumerServices">
                             <button type="button"
                                     class="btn btn-link"
-                                    ng-click="relyingpartyvm.viewassert()"
+                                    ng-click="relyingpartyvm.viewAssertionConsumerServices(assert)"
                                     uib-tooltip="{{assert.name}}"
                                     style="margin-left:-10px;word-wrap: break-word;word-break: break-all">
                                 {{
@@ -132,7 +134,7 @@
                                     assert.name;
                                 }}
                             </button>
-                             <span ng-show="vm.selectedRelyingParty.defaultAssertionConsumerService == attribute.name">
+                             <span ng-show="vm.selectedRelyingParty.defaultAssertionConsumerService == assert.name">
                                 (default)
                             </span>
                             <!--Index {{assert.index}}: {{assert.name}}({{assert.endpoint}}) - binding: {{assert.binding}}-->
@@ -151,7 +153,7 @@
                              ng-show="vm.selectedRelyingParty.attributeConsumerServices">
                             <button type="button"
                                     class="btn btn-link"
-                                    ng-click="relyingpartyvm.viewattribute()"
+                                    ng-click="relyingpartyvm.viewAttributeConsumerServices(attribute)"
                                     uib-tooltip="{{attribute.name}}"
                                     style="margin-left:-10px;word-wrap: break-word;word-break: break-all">
                                 {{
