--- a/vmidentity/lightwaveui/web/app/src/sso/usersandgroups/solutionuser/solutionuser.add.html
+++ b/vmidentity/lightwaveui/web/app/src/sso/usersandgroups/solutionuser/solutionuser.add.html
@@ -73,7 +73,7 @@
             <div class="popup-row col-xs-12">
                 <button type="submit"
                         class="btn btn-primary pull-right btn-popup-footer"
-                        ng-disabled="newSolutionUserForm.$invalid">Save</button>
+                        ng-disabled="isValid(newSolutionUser)">Save</button>
                 <button type="button"
                         class="btn btn-default pull-right btn-popup-footer"
                         ng-click="closeThisDialog('cancel')">Cancel</button>
