--- a/vmidentity/lightwaveui/web/app/src/sso/usersandgroups/solutionuser/solutionuser.edit.html
+++ b/vmidentity/lightwaveui/web/app/src/sso/usersandgroups/solutionuser/solutionuser.edit.html
@@ -34,10 +34,10 @@
                     <div class="col-xs-8"
                          ng-class="{ 'has-error': editSolutionUserForm.encodedcertfilepath.$invalid }">
                         <input type="file"
-                               on-read-file="setCertificate( vm.selectedSolutionUser, contents)"
+                               on-read-file="setSelectedCertificate(vm.selectedSolutionUser, contents)"
                                id="encodedcertfilepath"
                                name="encodedcertfilepath"
-                               ng-model=" vm.selectedSolutionUser.certificate.filepath"
+                               ng-model="vm.selectedSolutionUser.selCertificate.filepath"
                                required/>
                     </div>
                 </div>
@@ -45,7 +45,7 @@
             <div class="popup-row col-xs-12">
                 <button type="submit"
                         class="btn btn-primary pull-right btn-popup-footer"
-                        ng-disabled="editSolutionUserForm.$invalid">Save</button>
+                        ng-disabled="isSelectedCertificateValid(vm.selectedSolutionUser, vm.selectedSolutionUser.selCertificate)">Save</button>
                 <button type="button"
                         class="btn btn-default pull-right btn-popup-footer"
                         ng-click="closeThisDialog('cancel')">Cancel</button>
