--- a/vmidentity/lightwaveui/web/app/src/sso/identitysources/identitysource/identitysource.edit.html
+++ b/vmidentity/lightwaveui/web/app/src/sso/identitysources/identitysource/identitysource.edit.html
@@ -52,6 +52,15 @@
                      ng-show="vm.idsTab == 1;">
                     <div class="popup-row col-xs-12">
                         <div class="col-xs-4">
+                            Type
+                        </div>
+                        <div class="col-xs-8">
+                            <span ng-show="vm.selectedIdentitysource.type == 'IDENTITY_STORE_TYPE_LDAP_WITH_AD_MAPPING'">Active Directory as LDAP</span>
+                            <span ng-show="vm.selectedIdentitysource.type == 'IDENTITY_STORE_TYPE_LDAP'">Open LDAP</span>
+                        </div>
+                    </div>
+                    <div class="popup-row col-xs-12">
+                        <div class="col-xs-4">
                             Friendly Name
                         </div>
                         <div class="col-xs-8">
