--- a/vmidentity/lightwaveui/web/app/src/sso/usersandgroups/usersandgroups.view.html
+++ b/vmidentity/lightwaveui/web/app/src/sso/usersandgroups/usersandgroups.view.html
@@ -61,7 +61,7 @@
                                     class="ids-select"></select>
                             <input type="text" name="search" id="search" ng-model="vm.search"
                                    class="search-box"
-                                   placeholder="search by user name"/>
+                                   placeholder="search by name"/>
                             <button type="submit" class="btn btn-primary btn-sm">Search</button>
                         </form>
                     </div>
@@ -211,7 +211,7 @@
                                    id="solutionusersearch"
                                    ng-model="vm.solutionusersearch"
                                    class="search-box"
-                                   placeholder="search for solution"/>
+                                   placeholder="search by name or description"/>
                             <button type="submit"
                                     class="btn btn-primary btn-sm">
                                 Search
