--- a/vmidentity/lightwaveui/web/app/src/sso/policies/policies.view.html
+++ b/vmidentity/lightwaveui/web/app/src/sso/policies/policies.view.html
@@ -326,7 +326,7 @@
                         </div>
                         <div class="popup-row col-xs-12">
                             <div class="col-xs-6">
-                                Display Banner checkbox?
+                                Display Banner checkbox
                             </div>
                             <div class="col-xs-6">
                                 <img src="../app/assets/enabled.png"
@@ -345,19 +345,19 @@
                         </div>
                         <div class="popup-row col-xs-12">
                             <div class="col-xs-6">
-                                Display Logon banner & title?
+                                Hide Logon banner & title
                             </div>
                             <div class="col-xs-6">
                                 <img src="../app/assets/enabled.png"
                                      width="16px"
                                      height="16px"
-                                     ng-show="!vm.policies.brandPolicy.logonBannerDisabled"
+                                     ng-show="vm.policies.brandPolicy.logonBannerDisabled"
                                      uib-tooltip="Show Logon banner and title"
                                      style="margin-top:-5px;"/>
                                 <img src="../app/assets/disabled.png"
                                      width="16px"
                                      height="16px"
-                                     ng-show="vm.policies.brandPolicy.logonBannerDisabled"
+                                     ng-show="!vm.policies.brandPolicy.logonBannerDisabled"
                                      uib-tooltip="Hide Logon banner and title"
                                      style="margin-top:-5px;"/>
                             </div>
