--- a/vmidentity/lightwaveui/web/app/src/sso/usersandgroups/usersandgroups.view.html
+++ b/vmidentity/lightwaveui/web/app/src/sso/usersandgroups/usersandgroups.view.html
@@ -203,9 +203,9 @@
                               ng-submit="getsolutionusers(vm.identitysource, vm.solutionusersearch, vm.selectedSolutionUserSearchType)"
                               role="form"
                               style="float:right;">
-                            <select ng-model="vm.selectedSolutionUserSearchType"
+                           <!-- <select ng-model="vm.selectedSolutionUserSearchType"
                                     ng-options="t.name for t in vm.solutionUserSearchType"
-                                    class="ids-select"></select>
+                                    class="ids-select"></select>-->
                             <input type="text"
                                    name="solutionusersearch"
                                    id="solutionusersearch"
