--- a/vmidentity/lightwaveui/web/app/index.html
+++ b/vmidentity/lightwaveui/web/app/index.html
@@ -10,9 +10,10 @@
   <meta name="description" content="Web based management for Lightwave container">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="assets/tenant.png">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
-        integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
-        crossorigin="anonymous">
+    <link rel="stylesheet"
+          href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+          crossorigin="anonymous">
     <link rel="stylesheet" href="css/lightwave-ui.0.0.2.0.min.css">
   <link rel="stylesheet" href="css/lightwave-ui-vendor.0.0.2.0.min.css">
 </head>
