--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
                 <a title="singhsaurabh005" href="https://github.com/singhsaurabh005"><img alt="singhsaurabh005" src="https://avatars.githubusercontent.com/u/11926051?v=3" /></a>
                 <a title="harisso" href="https://github.com/harisso"><img alt="harisso" src="https://avatars.githubusercontent.com/u/11852065?v=3" /></a>
                 <a title="sjchase" href="https://github.com/sjchase"><img alt="sjchase" src="https://avatars.githubusercontent.com/u/1044976?v=3" /></a>
+                <a title="Divya Mehta" href="https://github.com/divyamehta"><img alt="divyamehta" src="https://avatars3.githubusercontent.com/u/729513?v=3" /></a>
               </p>
             </div>
           </div>
