--- a/index.html
+++ b/index.html
@@ -1,223 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-  <head>
-    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
-    <meta charset='utf-8'>
-    <meta content='width=device-width, initial-scale=1, user-scalable=0' name='viewport'>
-    <!-- Always force latest IE rendering engine or request Chrome Frame -->
-    <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
-    <!-- Use title if it's in the page YAML frontmatter -->
+<head>
+    <meta charset="utf-8">
     <title>Lightwave&trade; by VMware&reg;</title>
-    <link href='apple-touch-icon-152x152-precomposed.png' rel='apple-touch-icon' sizes='152x152'>
-    <link href='apple-touch-icon-144x144-precomposed.png' rel='apple-touch-icon' sizes='144x144'>
-    <link href='apple-touch-icon-114x114-precomposed.png' rel='apple-touch-icon' sizes='114x114'>
-    <link href='apple-touch-icon-72x72-precomposed.png' rel='apple-touch-icon' sizes='72x72'>
-    <link href='apple-touch-icon-precomposed.png' rel='apple-touch-icon'>
-    <link href='favicon.png' rel='shortcut icon'>
-    <link href='favicon.ico' rel='icon' type='image/ico'>
-    <link href="assets/css/all-fb21ec35.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body class='index'>
-    <div class='wrapper'>
-      <header>
-        <div class='peelback'></div>
-        <div class='container'>
-          <div class='row'>
-            <div class='brand-container'>
-              <a class="brand" href="https://vmware.github.io/lightwave"><h1>
-                Lightwave™
-              </h1>
-              </a>
-              <div class='by-vmware'>
-                by VMware, Inc.
-              </div>
-            </div>
-            <nav>
-              <a class="menu-actuator" href="#"><i class='ion-navicon'></i>
-              Menu
-              </a>
-              <div class='nav-collapse'>
-                <div class='container'>
-                  <div class='row'>
-                    <a href="#what-is-lightwave">What is Lightwave™</a>
-                    <a href="#getting-lightwave">Getting Lightwave™</a>
-                    <a href="#getting-started">Getting Started</a>
-                    <a href="#support">Support</a>
-                    <a href="#contributors">Contributors</a>
-                    <a href="#contributing">Contributing</a>
-                    <a href="#license">License</a>
-                  </div>
-                </div>
-              </div>
-            </nav>
-          </div>
-        </div>
-      </header>
-      <section class='hero'>
-        <div class='container'>
-
-          <div class="hero-image">
-            <a href="https://github.com/vmware/lightwave"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" /></a>
-            <img src="assets/img/lightwave-047a5f85.png" />
-          </div>
-
-          <h2 id="vmware-lightwave">VMware Lightwave™</h2>
-
-          <p>Security for Container Ecosystem</p>
-          <a class="button button-primary button-large" href="https://github.com/vmware/lightwave"><i class='ion-social-github'></i>
-          Fork
-          Lightwave™
-          <i class='ion-ios-arrow-right'></i>
-          </a>
-        </div>
-      </section>
-      <section class='about-lightwave'>
-        <div class='container'>
-          <div class='row'>
-            <div class='content'>
-              <h3 id="what-is-lightwave">What is Lightwave</h3>
-
-              <p>Project Lightwave is an open source project comprised of enterprise-grade, identity and access management services targeting critical security, governance, and compliance challenges for Cloud-Native Apps within the enterprise. Through integration with Project Photon, Project Lightwave can provide security and governance for container workloads. Project Lightwave can also serve a variety of use cases such as single sign-on, authentication, authorization and certificate authority, as well as certificate key management services across the entire infrastructure and application stack. Project Lightwave is based on a production quality code and an enterprise-grade architecture that is multi-tenant, scalable, and highly available multi master replication topology.</p>
-
-              <p>Project Lightwave is made up of the following key identity infrastructure elements:</p>
-
-              <ul>
-                <li><strong>Lightwave Directory Service</strong> - standards based, multi-tenant, multi-master, highly scalable LDAP v3 directory service enables an enterprise’s infrastructure to be used by the most-demanding applications as well as by multiple teams.</li>
-                <li><strong>Lightwave Certificate Authority</strong> - directory integrated certificate authority helps to simplify certificate-based operations and key management across the infrastructure.</li>
-                <li><strong>Lightwave Certificate Store</strong> - endpoint certificate store to store certificate credentials.</li>
-                <li><strong>Lightwave Authentication Services</strong> - cloud authentication services with support for Kerberos, OAuth 2.0/OpenID Connect, SAML and WSTrust enable interoperability with other standards-based technologies in the data center.</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class='getting-lightwave'>
-        <div class='container'>
-          <div class='row'>
-            <div class='content'>
-              <h3 id="getting-lightwave">Getting Lightwave</h3>
-
-              <p>You can download the latest Project Lightwave source code from <a href="https://github.com/vmware/lightwave">Github</a>. Project Lightwave has been validated with Project Photon and should work with most Linux container run time hosts. You can also get Lightwave RPMs from <a href="https://bintray.com/vmware/lightwave">Bintray</a>.</p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class='getting-started'>
-        <div class='container'>
-          <div class='row'>
-            <h2 id='getting-started'>Getting Started</h2>
-            <p>We’ve provided a few guides to help get you started:</p>
-          </div>
-          <p>You can download the latest Project Lightwave source code and documentation including the <a href="https://github.com/vmware/lightwave/blob/master/README.md">README</a>. Project Lightwave has been validated with Project Photon and should work with most Linux container run time hosts.</p>
-        </div>
-      </section>
-      <section class='support'>
-        <div class='container'>
-          <div class='row'>
-            <div class='content'>
-              <h3 id="support">Support</h3>
-
-              <p>Lightwave™ is released as open source software and comes with no commercial support.</p>
-
-              <p>But since we want to ensure success and recognize that Lightwave™ consumers might fall into a range of roles - from developers that are steeped in the conventions of open-source to customers that are more accustomed to VMware commercial offerings, we offer several methods of engaging with the Lightwave™ team and community.</p>
-
-              <p>For our developer community, feel free to join our Google groups at:</p>
-
-              <ul>
-                <li><a href="https://groups.google.com/forum/#!forum/vmware-lightwave-dev">vmware-lightwave-dev</a></li>
-                <li><a href="https://groups.google.com/forum/#!forum/vmware-lightwave-announce">vmware-lightwave-announce</a></li>
-              </ul>
-
-              <p>For more general user questions, visit the Lightwave™ user forum in our <a href="http://communities.vmware.com/community/vmtn/devops/project-lightwave">Lightwave™ VMware Community</a>.</p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class='contributors'>
-        <div class='container'>
-          <div class='row'>
-            <div class='content'>
-              <h2 id='contributors'>Contributors</h2>
-              <p>
-                <a title="Krishna Ganugapati" href="https://github.com/kganugapati"><img alt="Krishna Ganugapati" src="https://avatars.githubusercontent.com/u/11167611?v=3" /></a>
-                <a title="Sriram Nambakam" href="https://github.com/snambakam"><img alt="Sriram Nambakam" src="https://avatars.githubusercontent.com/u/10917504?v=3" /></a>
-                <a title="Johnny Ferguson" href="https://github.com/johnnyferguson"><img alt="Johnny Ferguson" src="https://avatars.githubusercontent.com/u/4875765?v=3" /></a>
-                <a title="aishu" href="https://github.com/aishu"><img alt="aishu" src="https://avatars.githubusercontent.com/u/1206719?v=3" /></a>
-                <a title="Andrei Izurov" href="https://github.com/aizurov-vmw"><img alt="Andrei Izurov" src="https://avatars.githubusercontent.com/u/11841394?v=3" /></a>
-                <a title="Balaji Boggaram Ramanarayan" href="https://github.com/balajiboggaram"><img alt="Balaji Boggaram Ramanarayan" src="https://avatars.githubusercontent.com/u/7728418?v=3" /></a>
-              </p>
-              <p>
-                <a title="elenashutova" href="https://github.com/elenashutova"><img alt="elenashutova" src="https://avatars.githubusercontent.com/u/12536702?v=3" /></a>
-                <a title="gsadhani" href="https://github.com/gsadhani"><img alt="gsadhani" src="https://avatars.githubusercontent.com/u/11847110?v=3" /></a>
-                <a title="Jason Schroeder" href="https://github.com/jasonsch"><img alt="Jason Schroeder" src="https://avatars.githubusercontent.com/u/1274313?v=3" /></a>
-                <a title="Adam Bernstein" href="https://github.com/numberer6"><img alt="Adam Bernstein" src="https://avatars.githubusercontent.com/u/11415543?v=3" /></a>
-                <a title="Priyesh" href="https://github.com/ppadmavilasom"><img alt="Priyesh" src="https://avatars.githubusercontent.com/u/11167452?v=3" /></a>
-                <a title="Jonathan Brown" href="https://github.com/sabertail"><img alt="Jonathan Brown" src="https://avatars.githubusercontent.com/u/738054?v=3" /></a>
-              </p>
-              <p>
-                <a title="schellappan" href="https://github.com/schellappan"><img alt="schellappan" src="https://avatars.githubusercontent.com/u/11465231?v=3" /></a>
-                <a title="shenoykrish" href="https://github.com/shenoykrish"><img alt="shenoykrish" src="https://avatars.githubusercontent.com/u/11840667?v=3" /></a>
-                <a title="Scott Salley" href="https://github.com/ssalley"><img alt="Scott Salley" src="https://avatars.githubusercontent.com/u/11413034?v=3" /></a>
-                <a title="Sumalatha Abhishek" href="https://github.com/sumasekar"><img alt="Sumalatha Abhishek" src="https://avatars.githubusercontent.com/u/4172554?v=3" /></a>
-                <a title="Travis Hall" href="https://github.com/tvs"><img alt="Travis Hall" src="https://avatars.githubusercontent.com/u/145500?v=3" /></a>
-                <a title="junsvmware" href="https://github.com/junsvmware"><img alt="junsvmware" src="https://avatars.githubusercontent.com/u/15912571?v=3" /></a>
-              </p>
-              <p>
-                <a title="Nimish Bhonsale" href="https://github.com/nimishbhonsale-vmware"><img alt="Nimish Bhonsale" src="https://avatars.githubusercontent.com/u/12462271?v=3" /></a>
-                <a title="wdu88" href="https://github.com/wdu88"><img alt="wdu88" src="https://avatars.githubusercontent.com/u/12436217?v=3" /></a>
-                <a title="Kyoung Won Kwon" href="https://github.com/kyoungkwon"><img alt="Kyoung Won Kwon" src="https://avatars.githubusercontent.com/u/13558419?v=3" /></a>
-                <a title="Anca Antochi" href="https://github.com/ancaantochi"><img alt="Anca Antochi" src="https://avatars.githubusercontent.com/u/15937192?v=3" /></a>
-                <a title="Andrew Gormley" href="https://github.com/agormley"><img alt="Andrew Gormley" src="https://avatars.githubusercontent.com/u/15987205?v=3" /></a>
-                <a title="rlohia" href="https://github.com/rlohia"><img alt="rlohia" src="https://avatars.githubusercontent.com/u/11660743?v=3" /></a>
-              </p>
-              <p>
-                <a title="singhsaurabh005" href="https://github.com/singhsaurabh005"><img alt="singhsaurabh005" src="https://avatars.githubusercontent.com/u/11926051?v=3" /></a>
-                <a title="harisso" href="https://github.com/harisso"><img alt="harisso" src="https://avatars.githubusercontent.com/u/11852065?v=3" /></a>
-                <a title="sjchase" href="https://github.com/sjchase"><img alt="sjchase" src="https://avatars.githubusercontent.com/u/1044976?v=3" /></a>
-                <a title="Divya Mehta" href="https://github.com/divyamehta"><img alt="divyamehta" src="https://avatars3.githubusercontent.com/u/729513?v=3" /></a>
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class='contributing'>
-        <div class='container'>
-          <div class='row'>
-            <div class='content'>
-              <h3 id="contributing">Contributing</h3>
-
-              <p>The Lightwave™ team will open the project to community contributions soon. Until then please feel free to fork the project and try out the RPMs and provide feedback in the support communities.</p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class='license'>
-        <div class='container'>
-          <div class='row'>
-            <div class='content'>
-              <h3 id="license">License</h3>
-
-              <p>Lightwave™ is comprised of many open source software components, each of which has its own license that is located in the source code of the respective component as well as documented in the <a href="https://github.com/vmware/lightwave/blob/master/open_source_license.txt">open source license file</a> accompanying the Lightwave™ distribution.</p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <div class='push--footer'></div>
-    </div>
-    <footer>
-      <div class='container'>
-        <div>
-          <p>
-            <a class="vmware" target="_blank" href="http://www.vmware.com">VMware, Inc.</a>
-          </p>
-          <p>
-            &copy;
-            2015
-            VMware, Inc. All Rights Reserved.
-          </p>
-        </div>
-      </div>
-    </footer>
-  </body>
-  <script src="//use.typekit.net/lqm4sxw.js" type="text/javascript"></script><script src="assets/js/all-86b9d6be.js" type="text/javascript"></script>
+    <base href="/lightwave/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico?v=2">
+</head>
+<body>
+<my-app>Loading...</my-app>
+<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="scripts.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
 </html>
